update docs config

--- a/layouts/partials/docs/inject/head.html
+++ b/layouts/partials/docs/inject/head.html
@@ -1,4 +1,4 @@
 <script defer language="javascript" type="text/javascript"  src="{{ "/js/copy_clipboard.js" | urlize | relURL }}"></script>
 <script defer language="javascript" type="text/javascript"  src="{{ "/js/command_replacement.js" | urlize | relURL }}"></script>
 <link rel="stylesheet" href="{{ "/css/syntax.css" | urlize | relURL }}">
-<meta property="og:image" content="https://zweitag.setops.net/docs/setops_meta.png" />
+<meta property="og:image" content="/setops_meta.png" />
