--- a/layouts/partials/docs/inject/toc-before.html
+++ b/layouts/partials/docs/inject/toc-before.html
@@ -10,8 +10,8 @@
       <input type="checkbox" name="aliasSwitch">
       <span class="slider round"></span>
     </label>
-    <label class="tooltip markdown blockquote book-hint"><a href="/docs/user/best-practices/alias/">Alias</a><span role="tooltip">💡To use the Alias <code>sos</code>, you need to create it in your terminal. Follow the link to best practices - "How to create an Alias".</span></label>
-    <img src="/docs/user/reset-arrow.png" alt="reset" name="reset" class="reset" title="reset">
+    <label class="tooltip markdown blockquote book-hint"><a href="/user/best-practices/alias/">Alias</a><span role="tooltip">💡To use the Alias <code>sos</code>, you need to create it in your terminal. Follow the link to best practices - "How to create an Alias".</span></label>
+    <img src="/user/reset-arrow.png" alt="reset" name="reset" class="reset" title="reset">
   </div>
   <hr>
   <br>
