update baseURL and canonical

--- a/layouts/partials/docs/inject/head.html
+++ b/layouts/partials/docs/inject/head.html
@@ -2,3 +2,4 @@
 <script defer language="javascript" type="text/javascript"  src="{{ "/js/command_replacement.js" | urlize | relURL }}"></script>
 <link rel="stylesheet" href="{{ "/css/syntax.css" | urlize | relURL }}">
 <meta property="og:image" content="/setops_meta.png" />
+<link rel="canonical" href="{{ .Permalink }}" />
