--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -88,11 +88,11 @@
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #001858;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #001858;
 }
 
 input:checked + .slider:before {
