--- a/layouts/partials/docs/inject/footer.html
+++ b/layouts/partials/docs/inject/footer.html
@@ -1,1 +1,3 @@
-<img referrerpolicy="no-referrer-when-downgrade" src="https://setops.matomo.cloud/matomo.php?idsite=3&amp;rec=1" style="border:0" alt="" />
+<noscript>
+  <img referrerpolicy="no-referrer-when-downgrade" src="https://setops.matomo.cloud/matomo.php?idsite=3&amp;rec=1" style="border:0" alt="" />
+</noscript>
