--- a/layouts/partials/docs/inject/toc-before.html
+++ b/layouts/partials/docs/inject/toc-before.html
@@ -2,6 +2,7 @@
 {{ if not ($.Page.Param "HideCommandReplacement") }}
   <h2>Customize Commands</h2>
   <div class="book-search" id="searchForm">
+    <input type="text" name="organization" placeholder="Organization" class="change-form stage">
     <input type="text" name="project" placeholder="Project" class="change-form stage">
     <input type="text" name="stage" placeholder="Stage" class="change-form stage">
     <input type="text" name="app" placeholder="App" class="change-form stage">
